apps/infra-mariadb/manifests.yaml
---
# Source: mariadb-galera/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mariadb-bootstrap-mariadb-galera
  namespace: "database"
  labels:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/version: 11.4.3
    helm.sh/chart: mariadb-galera-14.0.10
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mariadb-bootstrap
      app.kubernetes.io/name: mariadb-galera
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
        - port: 4567
        - port: 4568
        - port: 4444
---
# Source: mariadb-galera/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-bootstrap-mariadb-galera-headless
  namespace: "database"
  labels:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/version: 11.4.3
    helm.sh/chart: mariadb-galera-14.0.10
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: galera
      port: 4567
      targetPort: galera
      appProtocol: mysql
    - name: ist
      port: 4568
      targetPort: ist
      appProtocol: mysql
    - name: sst
      port: 4444
      targetPort: sst
      appProtocol: mysql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/name: mariadb-galera
---
# Source: mariadb-galera/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-bootstrap-mariadb-galera
  namespace: "database"
  labels:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/version: 11.4.3
    helm.sh/chart: mariadb-galera-14.0.10
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      appProtocol: mysql
      nodePort: null
  selector:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/name: mariadb-galera
---
# Source: mariadb-galera/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-bootstrap-mariadb-galera
  namespace: "database"
  labels:
    app.kubernetes.io/instance: mariadb-bootstrap
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/version: 11.4.3
    helm.sh/chart: mariadb-galera-14.0.10
spec:
  podManagementPolicy: OrderedReady
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: mariadb-bootstrap
      app.kubernetes.io/name: mariadb-galera
  serviceName: mariadb-bootstrap-mariadb-galera-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: dfe62ab2e7715a24c8ba977524284c744abb547d9b45f1f0d2124e12ef1b3b77
      labels:
        app.kubernetes.io/instance: mariadb-bootstrap
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mariadb-galera
        app.kubernetes.io/version: 11.4.3
        helm.sh/chart: mariadb-galera-14.0.10
    spec:
      
      automountServiceAccountToken: false
      serviceAccountName: mariadb-galera-manager
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: mariadb-bootstrap
                    app.kubernetes.io/name: mariadb-galera
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        runAsUser: 1001
        supplementalGroups: []
        sysctls: []
      containers:
        - name: "mariadb-galera"
          image: docker.io/bitnami/mariadb-galera:11.4.3-debian-12-r2
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - bash
            - -ec
            - |
                # Bootstrap from the indicated node
                NODE_ID="${MY_POD_NAME#"mariadb-bootstrap-mariadb-galera-"}"
                if [[ "$NODE_ID" -eq "0" ]]; then
                    export MARIADB_GALERA_CLUSTER_BOOTSTRAP=yes
                    export MARIADB_GALERA_FORCE_SAFETOBOOTSTRAP=yes
                else
                    export MARIADB_GALERA_CLUSTER_BOOTSTRAP=no
                fi
                exec /opt/bitnami/scripts/mariadb-galera/entrypoint.sh /opt/bitnami/scripts/mariadb-galera/run.sh
          ports:
            - name: mysql
              containerPort: 3306
            - name: galera
              containerPort: 4567
            - name: ist
              containerPort: 4568
            - name: sst
              containerPort: 4444
          livenessProbe:
            exec:
              command:
                - bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  exec mysql -u"${MARIADB_ROOT_USER}" -p"${password_aux}" -e "select * from mysql.wsrep_cluster_members;"
            initialDelaySeconds: 240
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  exec mysqladmin status -u"${MARIADB_ROOT_USER}" -p"${password_aux}"
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - name: previous-boot
              mountPath: /opt/bitnami/mariadb/.bootstrap
            - name: data
              mountPath: /bitnami/mariadb
            - name: mariadb-galera-config
              mountPath: /bitnami/conf/my.cnf
              subPath: my.cnf
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/logs
              subPath: app-logs-dir
      volumes:
        - name: previous-boot
          emptyDir: {}
        - name: mariadb-galera-config
          configMap:
            name: mariadb-bootstrap-mariadb-galera-configuration
        - name: empty-dir
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: mariadb-pvc
